k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: novachat
  labels:
    app: novachat
    environment: production
