k8s/service.yml
# MongoDB Service
apiVersion: v1
kind: Service
metadata:
  name: novachat-mongodb-service
  namespace: novachat
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP

---
# Server Service
apiVersion: v1
kind: Service
metadata:
  name: novachat-server-service
  namespace: novachat
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP

---
# Client Service
apiVersion: v1
kind: Service
metadata:
  name: novachat-client-service
  namespace: novachat
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
